# snowpark-python-template

./: .env  .gitignore  .pylintrc  README.md  app.toml  environment.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  resources.sql  setup.py
.github/workflows/: build-and-deploy.yml  pr-checks.yml
src/: app.py  functions.py
src/procs/: app.py
src/udf/: functions.py
test/: conftest.py  test_app.py  test_functions.py
test/procs/: test_app.py
test/udf/: test_functions.py
